# user-access-management-app

./: .gitignore  Dockerfile  README.md  app.py  export_requirements.sh  pyproject.toml  requirements-dev.txt  requirements.txt
instance/: user_access_management.db
static/css/: bootstrap.min.css  theme.css
static/js/: user-access-management.js
templates/: _flashmessages.html  _renderfield.html  add_employee.html  add_team.html  assign_team.html  base.html  dashboard.html
